# gd

./: Cargo.toml  LICENSE  SECURITY.md
crates/gd-client/: Cargo.toml
crates/gd-client/src/: auth.rs  client.rs  lib.rs  state.rs
crates/gd-core/: Cargo.toml
crates/gd-core/src/: lib.rs  macros.rs
crates/gd-core/src/types/: color.rs  id.rs  info.rs  mod.rs  password.rs  record.rs  reward.rs  statistics.rs  str.rs  time.rs  values.rs  version.rs
crates/gd-crypto/: Cargo.toml
crates/gd-crypto/src/: aes.rs  base64.rs  check.rs  key.rs  lib.rs  robtop.rs  sha1.rs  utf8.rs  zip.rs
crates/gd-entities/: Cargo.toml
crates/gd-entities/src/: artists.rs  entities.rs  lib.rs  users.rs
crates/gd-enums/: Cargo.toml
crates/gd-enums/src/: comments.rs  icons.rs  lib.rs
crates/gd-images/: Cargo.toml
crates/gd-internals/: Cargo.toml
crates/gd-internals/src/: http.rs  lib.rs  session.rs  thunk.rs
crates/gd-schema/: .gitignore  Cargo.toml  build.rs
crates/gd-schema/schema/: artist.capnp  color.capnp  comment.capnp  friendRequest.capnp  gauntlet.capnp  id.capnp  info.capnp  level.capnp  mapPack.capnp  message.capnp  option.capnp  password.capnp  percent.capnp  record.capnp  reward.capnp  size.capnp  song.capnp  statistics.capnp  time.capnp  user.capnp  values.capnp  version.capnp
crates/gd-schema/schema/api/: artist.capnp  colorChannel.capnp  editor.capnp  folder.capnp  guidelines.capnp  level.capnp  like.capnp  metadata.capnp  object.capnp  opacity.capnp  recording.capnp  song.capnp
crates/gd-schema/src/: artist.rs  lib.rs  option.rs  schema.rs  user.rs
internals-serde/: mod.rs  ser.rs
src/: lib.rs  main.rs
~crypto/: aes.rs  base64.rs  check.rs  constants.rs  hash.rs  mod.rs  robtop.rs  utf8.rs  xor.rs  zip.rs
~serde/: de.rs  robtop.rs
