[package]
name = "gd-client"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
description = "GD client functionality."
documentation = "https://docs.rs/gd-client"
readme = "README.md"
repository.workspace = true
homepage.workspace = true
keywords = ["gd", "client"]

[dependencies.gd-core]
workspace = true

[dependencies.gd-internals]
workspace = true

[dependencies.ownership]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
