[package]
name = "gd-crypto"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
description = "Cryptography used in GD."
documentation = "https://docs.rs/gd-crypto"
readme = "README.md"
repository.workspace = true
homepage.workspace = true
keywords = ["gd", "crypto"]

[dependencies.aes]
workspace = true

[dependencies.base64]
workspace = true

[dependencies.ecb]
workspace = true

[dependencies.flate2]
workspace = true

[dependencies.hex-literal]
workspace = true

[dependencies.sha1]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.xor-cipher]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
